support for bottom toolbar

--- a/projects/ng-quill-tex/src/lib/ng-quill-tex.component.html
+++ b/projects/ng-quill-tex/src/lib/ng-quill-tex.component.html
@@ -1,13 +1,16 @@
 <div [formGroup]="group" *ngIf="group else noGroup">
-  <quill-editor [modules]="modules" #quillEditior trackChanges="all" format="object" (onEditorCreated)="getEditorInstance($event)"
+  <quill-editor [styles]="{height: '50px'}"  [customToolbarPosition]="customToolbarPosition" [modules]="modules" #quillEditior trackChanges="all" format="object" (onEditorCreated)="getEditorInstance($event)"
     [formControlName]="controlName">
   </quill-editor>
 </div>
 
 <ng-template #noGroup>
   <div *ngIf="!group">
-    <quill-editor [modules]="modules" #quillEditior trackChanges="all" format="object" (onEditorCreated)="getEditorInstance($event)"
-      [(ngModel)]="editorContent">
+    <quill-editor [styles]="{height: '50px'}"  [customToolbarPosition]="customToolbarPosition" [modules]="modules" #quillEditior trackChanges="all" format="object" (onEditorCreated)="getEditorInstance($event)"
+    [(ngModel)]="content">
+    <div *ngIf="customToolbarPosition === 'bottom'" quill-editor-toolbar>
+      <ng-content></ng-content>
+    </div>
     </quill-editor>
   </div>
 </ng-template>
