--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="show">
-  <ng-quill-tex [styles]="{height: '50px'}" (editorLoadFinished)="editorLoadFinished($event)" [modules]="quillConfig" (textChanged)="onTextChanged($event)" 
-  (fileUploaded)="fileUploaded($event)" [customToolbarPosition]="'bottom'" [imageUrl]="quillImageUrl" [content]="editorContent" [isMobile]="true">
+  <ng-quill-tex [styles]="{height: '400px',overflow: 'auto'}" (editorLoadFinished)="editorLoadFinished($event)" [modules]="quillConfig" (textChanged)="onTextChanged($event)" 
+  (fileUploaded)="fileUploaded($event)" [customToolbarPosition]="'bottom'" [imageUrl]="quillImageUrl" [content]="editorContent" [isMobile]="false">
       <span class="ql-formats">
         <button type="button" class="ql-code-block"></button>
         <button type="button" class="ql-image"></button>
